# openprocmonlib-static-cmake

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  optest.cpp
include/libprocmon/: kernelsdk.hpp  logsdk.h
src/libprocmon/: libprocmon.lib
